--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation 'com.github.claudiodegio:MsvSearch:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
